# forest_project

./: .flake8  .gitignore  README.md  README.rst  mypy.ini  noxfile.py  pyproject.toml
.github/workflows/: checks.yml  ckecks.yml
9_evaluation_selection(competition)/: Forest.ipynb
N3wBaz/mlops-zoomcamp/homework1/: homework1.ipynb
src/forest_ml/: data.py  eda.py  nested_cv.py  pipeline.py  train.py
tests/: test_forest_ml.py  test_train.py  test_train_nested.py
