[tool.poetry]
name = "forest_ml"
version = "0.1.0"
description = ""
authors = ["Ruslan Romanov <ftnewt@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9poetry"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
