[tool.poetry]
name = "forest_ml"
version = "0.1.0"
description = ""
authors = ["Ruslan Romanov <ftnewt@gmail.com>"]

[tool.poetry.scripts]
train = "forest_ml.train:train"
eda = "forest_ml.eda:eda"
train_nested_cv = "forest_ml.nested_cv:train_nested_cv"

[tool.poetry.dependencies]
python = "^3.8poetry"
pandas = "1.3.5"
click = "^8.1.3"
poetry = "^1.1.13"
scikit-learn = "^1.0.2"
pandas-profiling = "^3.2.0"
mlflow = "^1.25.1"
Boruta = "^0.3"
virtualenv = "^20.14.1"






[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
black = "^22.3.0"
flake8 = "^4.0.1"
mypy = "^0.950"
nox = "^2022.1.7"




[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"